--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="slide">
     <h2>Unified CMS - Frontend</h2>
     <img src="img/logo-bi.png" />
-    <h3>Topic1, topic2, topic3</h3>
+    <h3>Angular, Tooling, and Project Organization</h3>
   </div>
 
   <div class="slide">
@@ -38,7 +38,7 @@
 
   <div class="slide">
     <h2>Thats a lot of stuff...</h2>
-    <h3 class="animStep">How does each piece solve a problem?</h3>
+    <h3 class="animStep">Each one solves a piece of the problem.</h3>
   </div>
 
   <div class="slide">
@@ -299,6 +299,17 @@
     <h3 class="animStep">100% Documentation</h3>
     <h3 class="animStep">Jenkins Integration</h3>
     <h3 class="animStep">Working Build Process</h3>
+  </div>
+
+  <div class="slide">
+    <h2>Whats next?</h2>
+    <h3 class="animStep">More Post Editor</h3>
+    <h3 class="animStep">Backend Integration</h3>
+    <h3 class="animStep">Deploy Envs.</h3>
+  </div>
+
+  <div class="slide">
+    <h2>k.thx.bye.</h2>
   </div>
 
   <ul class="slide_list">
