--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
   <div class="slide">
     <h2>Goal</h2>
     <h3 style="font-size: 30px; line-height: 40px; margin-bottom: 20px;">
-      Use modern tools and frameworks to build a consistant and easily modified multi-site CMS frontend.
+      Use modern tools to build a consistant and maintainable multi-site CMS frontend.
     </h3>
+    <h2 class="animStep">Problem - Frontend Development Has Matured</h2>
+    <h3 class="animStep">Single Page Applications</h3>
+    <h3 class="animStep">Complex Dependancy Managment</h3>
+    <h3 class="animStep">Compilation steps</h3>
+    <h3 class="animStep">Build process</h3>
+    <h3 class="animStep">Testability</h3>
+    <h3 class="animStep">Documentation</h3>
+  </div>
+
+  <div class="slide">
+    <h2>Blessing - Frontend Development Has Matured</h2>
     <h3 class="animStep">angular - framework</h3>
     <h3 class="animStep">yeoman - scaffolding</h3>
     <h3 class="animStep">bower - package managment</h3>
     <h3 class="animStep">grunt - build tool</h3>
     <h3 class="animStep">karma - test runner</h3>
     <h3 class="animStep">jasmine - test descriptor</h3>
-    <h3 class="animStep">ngdocs - documentation generator</h3>
-  </div>
-
-
-  <div class="slide">
-    <h2>Thats a lot of stuff...</h2>
-    <h3 class="animStep">Each one solves a piece of the problem.</h3>
+    <h3 class="animStep">ngdocs - documentation generator</h3>    
   </div>
 
   <div class="slide">
@@ -306,6 +311,30 @@
     <h3 class="animStep">More Post Editor</h3>
     <h3 class="animStep">Backend Integration</h3>
     <h3 class="animStep">Deploy Envs.</h3>
+  </div>
+
+  <div class="slide link-page">
+    <div>
+      <h2>Videos</h2>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=HCR7i5F5L8c">Design Decisions in AngularJS - Mi&#353;ko Hevery</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=ZhfUv0spHCY">AngularJS MTV Meetup: Best Practices - Mi&#353;ko Hevery</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=WqmeI5fZcho">Writing Directives - Mi&#353;ko Hevery</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=wV4iroc6HiY">The future of Angular - Mi&#353;ko Hevery</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=Mk-tFn2Ix6g">Better Web App Development Through Tooling - Paul Irish</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=iUQ1fvdO9GY">Automating Your Front-End Workflow With Yeoman - Addy Osmani</a></h3>
+      <h3><a target="_new" href="https://www.youtube.com/watch?v=PPXeWjWp-8Y">Chrome DevTools - Paul Irish and Addy Osmani</a></h3>
+      <br />
+      <h2>Official</h2>
+      <h3><a target="_new" href="https://www.youtube.com/user/angularjs">Angular JS Youtube Channel</a></h3>
+      <h3><a target="_new" href="https://docs.angularjs.org/tutorial">Angular's Official PhoneCat Tutorial</a></h3>
+      <br />
+      <h2>People to Follow</h2>
+      <h3><a target="_new" href="http://misko.hevery.com/about/">Mi&#353;ko Hevery</a></h3> 
+      <h3><a target="_new" href="http://addyosmani.com/blog/tag/angular/">Addy Osmani</a></h3>
+      <h3><a target="_new" href="http://www.paulirish.com/">Paul Irish</a></h3>
+      <h3><a target="_new" href="http://www.crockford.com/">Douglas Crockford</a></h3>
+
+    </div>
   </div>
 
   <div class="slide">
