updating grunt tasks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3 class="animStep">grunt - build tool</h3>
     <h3 class="animStep">karma - test runner</h3>
     <h3 class="animStep">jasmine - test descriptor</h3>
-    <h3 class="animStep">ngdocs - documentation generator</h3>    
+    <h3 class="animStep">ngdocs - documentation generator</h3>
   </div>
 
   <div class="slide">
@@ -229,6 +229,8 @@
       <div class="animStep">$ grunt serve</div>
       <div class="animStep">$ grunt test</div>
       <div class="animStep">$ grunt build</div>
+      <div class="animStep">$ grunt ngdocs</div>
+      <div class="animStep">$ grunt viewdocs</div>
     </pre>
   </div>
 
@@ -329,7 +331,7 @@
       <h3><a target="_new" href="https://docs.angularjs.org/tutorial">Angular's Official PhoneCat Tutorial</a></h3>
       <br />
       <h2>People to Follow</h2>
-      <h3><a target="_new" href="http://misko.hevery.com/about/">Mi&#353;ko Hevery</a></h3> 
+      <h3><a target="_new" href="http://misko.hevery.com/about/">Mi&#353;ko Hevery</a></h3>
       <h3><a target="_new" href="http://addyosmani.com/blog/tag/angular/">Addy Osmani</a></h3>
       <h3><a target="_new" href="http://www.paulirish.com/">Paul Irish</a></h3>
       <h3><a target="_new" href="http://www.crockford.com/">Douglas Crockford</a></h3>
