modify grunt cmds

--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
     <h3 class="animStep">File watching</h3>
     <h3 class="animStep">Automatic test-running</h3>
     <h3 class="animStep">Build</h3>
+    <h3 class="animStep">Documentation generation</h3>
     <br />
     <br />
     <pre class="pretty-center" style="text-align: left">
       <div class="animStep">$ grunt serve</div>
       <div class="animStep">$ grunt test</div>
-      <div class="animStep">$ grunt build</div>
-      <div class="animStep">$ grunt ngdocs</div>
-      <div class="animStep">$ grunt viewdocs</div>
+      <div class="animStep">$ grunt dist (build + servebuild)</div>
+      <div class="animStep">$ grunt docs (ngdocs + servengdocs)</div>
     </pre>
   </div>
 
